--- a/src/index.css
+++ b/src/index.css
@@ -31,10 +31,25 @@ button {
 }
 .basket-item {
   border-bottom: 2px solid black;
-  display: flex;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: 25% 25% 25% 25%;
+  grid-template-rows: auto;
   align-items: center;
 }
 .checkout-display {
   text-align: right;
+}
+.product-count {
+  margin: 0px 10px;
+}
+.individual-product-cost {
+  margin: 0px 10px;
+}
+.special-offer {
+  background: green;
+  color: white;
+  text-align: center;
+  border-radius: 25px;
+  width: 100px;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px;
 }
